--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
-    "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "firebase": "^8.6.8",
     "formik": "^2.2.9",
-    "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-phone-input-2": "^2.14.0",
-    "react-yup": "^1.21.0",
-    "yup": "^0.32.9",
     "react-icons": "^4.2.0",
+    "react-phone-input-2": "^2.14.0",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-yup": "^1.21.0",
     "reactstrap": "^8.9.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
