--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.0.1",
     "firebase": "^8.6.8",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
