--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-phone-input-2": "^2.14.0",
