--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reactstrap": "^8.9.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
