--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "data-fns": "^0.1.8",
+    "date-fns": "^2.22.1",
     "firebase": "^8.6.8",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -23,11 +25,15 @@
     "react-icons": "^4.2.0",
     "react-phone-input-2": "^2.14.0",
     "react-pro-sidebar": "^0.6.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-table": "^7.7.0",
     "react-yup": "^1.21.0",
     "reactstrap": "^8.9.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
@@ -57,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
