--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-paginate": "^7.1.3",
     "react-phone-input-2": "^2.14.0",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
